src/objects/LiveChatTranscript.object
<CustomObject>
    <fields>
        <fullName>Categoria__c</fullName>
        <label>Categoria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisti Negozio</fullName>
                </value>
                <value>
                    <fullName>Acquisti E-commerce</fullName>
                </value>
                <value>
                    <fullName>Acquisti Yoox</fullName>
                </value>
                <value>
                    <fullName>Problematiche E-commerce</fullName>
                </value>
                <value>
                    <fullName>Problematiche Segnalate</fullName>
                </value>
                <value>
                    <fullName>Problematiche Yoox</fullName>
                </value>
                <value>
                    <fullName>Cura prodotti</fullName>
                </value>
                <value>
                    <fullName>Feedback del cliente</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Spam</fullName>
                </value>
                <value>
                    <fullName>Comunicazione</fullName>
                </value>
                <value>
                    <fullName>Proposte collaborazione</fullName>
                </value>
                <value>
                    <fullName>Risorse umane</fullName>
                </value>
                <value>
                    <fullName>Richieste amministrazione</fullName>
                </value>
                <value>
                    <fullName>Privacy</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
                <value>
                    <fullName>Catalogues</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Segnalazioni OMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conversation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conversation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction__c</fullName>
        <label>Customer Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non soddisfatto</fullName>
                    <label>🙁</label>
                </value>
                <value>
                    <fullName>Parzialmente soddisfatto</fullName>
                    <label>🙂</label>
                </value>
                <value>
                    <fullName>Soddisfatto</fullName>
                    <label>😀</label>
                </value>
                <value>
                    <fullName>Neutro</fullName>
                    <label>😐</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sottocategoria__c</fullName>
        <label>Sottocategoria</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Categoria__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisti</fullName>
                </value>
                <value>
                    <fullName>Acquisti potenziali</fullName>
                </value>
                <value>
                    <fullName>Altro</fullName>
                </value>
                <value>
                    <fullName>Amministrazione</fullName>
                </value>
                <value>
                    <fullName>Assistenza generica prodotto</fullName>
                </value>
                <value>
                    <fullName>Boutique</fullName>
                    <label>Contatta Boutique</label>
                </value>
                <value>
                    <fullName>Cambi e resi</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t find my size</fullName>
                </value>
                <value>
                    <fullName>Cancellazione Ordini</fullName>
                </value>
                <value>
                    <fullName>Comunicazione</fullName>
                </value>
                <value>
                    <fullName>Crosschannel</fullName>
                </value>
                <value>
                    <fullName>Dati di login</fullName>
                </value>
                <value>
                    <fullName>Digital &amp; ICT</fullName>
                </value>
                <value>
                    <fullName>Feedback negativi</fullName>
                </value>
                <value>
                    <fullName>Feedback positivi</fullName>
                </value>
                <value>
                    <fullName>Finanza</fullName>
                </value>
                <value>
                    <fullName>Frodi</fullName>
                </value>
                <value>
                    <fullName>Info Generiche</fullName>
                </value>
                <value>
                    <fullName>Informazioni su care</fullName>
                </value>
                <value>
                    <fullName>Informazioni su composizione</fullName>
                </value>
                <value>
                    <fullName>Informazioni su ordini acquistati</fullName>
                </value>
                <value>
                    <fullName>Informazioni su pagamento</fullName>
                </value>
                <value>
                    <fullName>Invio candidatura</fullName>
                </value>
                <value>
                    <fullName>Legale</fullName>
                </value>
                <value>
                    <fullName>Logistica</fullName>
                </value>
                <value>
                    <fullName>Pagamenti</fullName>
                </value>
                <value>
                    <fullName>Problematica tecnica</fullName>
                </value>
                <value>
                    <fullName>Problemi di relazione</fullName>
                </value>
                <value>
                    <fullName>Problemi su ordini</fullName>
                </value>
                <value>
                    <fullName>Problemi su pagamento</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_Chat_Transcripts</fullName>
        <columns>Name</columns>
        <columns>LiveChatVisitor</columns>
        <columns>Status</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Browser</columns>
        <columns>ReferrerUri</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>0,1,2,3,4,5</value>
        </filters>
        <label>All Chat Transcripts</label>
    </listViews>
    <listViews>
        <fullName>All_Chat_US_CA</fullName>
        <columns>Name</columns>
        <columns>Status</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Owner</columns>
        <columns>Conversation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LiveChatButton</field>
            <operation>contains</operation>
            <value>US/CA</value>
        </filters>
        <label>All Chat US&amp;CA</label>
    </listViews>
    <listViews>
        <fullName>Chat_Button_LiveChatTranscript</fullName>
        <filterScope>Queue</filterScope>
        <label>Live Agent</label>
        <queue>Live_Agent</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Chat_Transcripts</fullName>
        <columns>Name</columns>
        <columns>LiveChatVisitor</columns>
        <columns>Status</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <filterScope>Mine</filterScope>
        <label>My Chat Transcripts</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>